// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit accepts new props 1`] = `
<button
  className="react-form-submit classy submit"
  id="submitId"
  type="submit"
>
  Submit
</button>
`;

exports[`Submit renders with default props 1`] = `
<button
  className="react-form-submit"
  type="submit"
>
  Submit
</button>
`;
